# catkin_ws

./: .gitignore  .gitmodules  README.md  sync_mr_slam.sh
arduino_feedback/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
arduino_feedback/msg/: PID_gains.msg  PID_gains.msg~  PID_motors_gains.msg  PID_motors_gains.msg~  arduino_input.msg  arduino_input.msg~  feedback.msg~  feedback_int.msg~  feedback_int16.msg~  feedback_int32.msg~  publish_PID_motors_gains.txt  publish_PID_motors_gains.txt~
arduino_mr/: CMakeLists.txt  CMakeLists.txt~  ar.py  ar.py~  package.xml  package.xml~  pioneer_2at.bak.py  pioneer_2at.py  pioneer_2at.py~  pioneer_2at_feedback.py  pioneer_2at_safe.py~  pioneer_3dx.py  pioneer_3dx.py~  pioneer_3dx_safe.py~
arduino_mr/launch/: atx2_architecture.launch  to_joy.launch
arduino_mr/msg/: PID_gains.msg  PID_gains.msg~  PID_motors_gains.msg  arduino_input.msg  arduino_input.msg~  feedback_int.msg  feedback_int.msg~
arduino_mr/src/: pub_vel.py
example_pkg/: CMakeLists.txt  package.xml
example_pkg/launch/: example.launch  example2.launch
example_pkg/src/: example_pkg_node.cpp
ground_truth_fetcher/: CMakeLists.txt  package.xml
ground_truth_fetcher/launch/: ground_truth_bag.launch  ground_truth_real.launch  ground_truth_simul.launch  multicam_multi_board.launch  multicam_single_board.launch
ground_truth_fetcher/nodes/: monitor_gt_paths.py  multi_robot_tf2_broadcaster.py.backup  multirobot_tf2_broadcaster.py
ground_truth_fetcher/res/: README.md
ground_truth_fetcher/res/boards/vrep_multicam_res/: board_mf0.yml  board_mf1.yml  board_mf2.yml  board_mf3.yml  board_mf4.yml  board_mf5.yml  board_mf6.yml  board_mf7.yml  boards.yml  boards_real.yml
ground_truth_fetcher/res/calibration/: ps3M_blue_calib.yaml
ground_truth_fetcher/workspace_transforms/: README.md  find_transform_mean.py  record_topics.sh  results_transform_left_to_origin.txt  results_transform_right_to_origin.txt  transform_left_to_origin.bag  transform_left_to_origin.txt  transform_right_to_origin.bag  transform_right_to_origin.txt
joy_to_arduino/: CMakeLists.txt  CMakeLists.txt~  package.xml  teleop_MR.cpp  teleop_MR_2at.cpp  teleop_MR_2at.cpp~
joy_to_arduino/src/: teleop_MR.cpp  teleop_MR_2at.cpp
learning_tf/: package.xml
learning_tf/nodes/: turtle_tf_broadcaster.py
odometry/: CMakeLists.txt  CMakeLists.txt~  odometry_node3.cpp  odometry_node3.cpp~  odometry_node_4w.cpp  odometry_node_4w.cpp~  package.xml  package.xml~
odometry/msg/: odo_msg.msg  odo_msg.msg~  odometry.msg~
ros_utils/: CMakeLists.txt  package.xml
ros_utils/nodes/: bag_add_time_offset.py  bagmerge.py  bagtrim.py
topic_provider/: CMakeLists.txt  package.xml
topic_provider/include/topic_provider/: topic_provider_node.h
topic_provider/launch/: graphslam-over-topics.launch  graphslam_over_topics.launch  run_online_graphslam.launch  setup_experiment.launch
topic_provider/scripts/SLAM/networking/: README.md  custom_exceptions.py  hosts_example_file  interfaces_odroidXU3  multi_robot_adhoc  setup_network.py
topic_provider/scripts/SLAM/networking/example_files/: hosts_example_file
topic_provider/src/: graphslam_engine_launcher.py  ini_parser.py  topic_provider_node.cpp
topic_provider/src/supplementary/: custom_exceptions.py
